Added the info screen

--- a/nickproject/Base.lproj/Main.storyboard
+++ b/nickproject/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,115 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="nickproject" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="01a-AD-0aa">
+                                <rect key="frame" x="329" y="31" width="30" height="40"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <state key="normal" title="+"/>
+                                <connections>
+                                    <action selector="addNewRoomPushed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2BR-96-rcj"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kHg-Pc-UKa">
+                                <rect key="frame" x="0.0" y="174" width="375" height="493"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseCell" rowHeight="78" id="uf5-iy-eGa" customClass="RoomTableCell" customModule="nickproject" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="78"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uf5-iy-eGa" id="4Gp-OJ-ty0">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="77.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="kHg-Pc-UKa" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="ETa-PD-AQe"/>
+                            <constraint firstItem="kHg-Pc-UKa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="154" id="IXF-DG-jVt"/>
+                            <constraint firstItem="kHg-Pc-UKa" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Nel-XZ-keW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="01a-AD-0aa" secondAttribute="trailing" constant="16" id="TfT-97-74O"/>
+                            <constraint firstItem="kHg-Pc-UKa" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="khQ-NN-WmZ"/>
+                            <constraint firstItem="01a-AD-0aa" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="11" id="ssZ-5D-g4l"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="roomsTable" destination="kHg-Pc-UKa" id="YPh-xE-Rw2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="33.733133433283363"/>
+        </scene>
+        <!--Info ScreenVC-->
+        <scene sceneID="igV-Sv-S2f">
+            <objects>
+                <viewController storyboardIdentifier="InfoScreenVC" id="WE3-j9-qX9" customClass="InfoScreenVC" customModule="nickproject" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="toX-nn-uHb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="INFO LABEL 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mET-fb-rgW">
+                                <rect key="frame" x="135" y="185" width="105" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="INFO LABEL 2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yyT-wA-kB1">
+                                <rect key="frame" x="133.5" y="275" width="108" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="INFO LABEL 3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O3V-Zh-Me9">
+                                <rect key="frame" x="135" y="347" width="108" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="INFO LABEL 4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Okt-T4-Ygi">
+                                <rect key="frame" x="135" y="423" width="108" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Room Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fKi-AF-mEN">
+                                <rect key="frame" x="140" y="55" width="94" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="fKi-AF-mEN" firstAttribute="top" secondItem="Wr5-Hh-5IY" secondAttribute="top" constant="35" id="5he-vi-DvT"/>
+                            <constraint firstItem="yyT-wA-kB1" firstAttribute="centerX" secondItem="mET-fb-rgW" secondAttribute="centerX" id="8nb-lp-QKy"/>
+                            <constraint firstItem="fKi-AF-mEN" firstAttribute="centerX" secondItem="Wr5-Hh-5IY" secondAttribute="centerX" id="9I8-cY-66V"/>
+                            <constraint firstItem="mET-fb-rgW" firstAttribute="centerX" secondItem="Wr5-Hh-5IY" secondAttribute="centerX" id="IM0-6R-djW"/>
+                            <constraint firstItem="O3V-Zh-Me9" firstAttribute="centerX" secondItem="yyT-wA-kB1" secondAttribute="centerX" id="KCb-zO-S6c"/>
+                            <constraint firstItem="O3V-Zh-Me9" firstAttribute="top" secondItem="yyT-wA-kB1" secondAttribute="bottom" constant="51" id="Mo1-SL-nBz"/>
+                            <constraint firstItem="yyT-wA-kB1" firstAttribute="top" secondItem="mET-fb-rgW" secondAttribute="bottom" constant="69" id="Pk4-6X-ERi"/>
+                            <constraint firstItem="Okt-T4-Ygi" firstAttribute="centerX" secondItem="O3V-Zh-Me9" secondAttribute="centerX" id="W2e-3L-LeX"/>
+                            <constraint firstItem="yyT-wA-kB1" firstAttribute="top" secondItem="Wr5-Hh-5IY" secondAttribute="top" constant="255" id="XLs-YX-1Vm"/>
+                            <constraint firstItem="Okt-T4-Ygi" firstAttribute="top" secondItem="O3V-Zh-Me9" secondAttribute="bottom" constant="55" id="bKI-F7-Ieg"/>
+                            <constraint firstItem="mET-fb-rgW" firstAttribute="top" secondItem="Wr5-Hh-5IY" secondAttribute="top" constant="165" id="grh-IL-gwH"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Wr5-Hh-5IY"/>
+                    </view>
+                    <connections>
+                        <outlet property="roomNameLabel" destination="fKi-AF-mEN" id="7IS-Xg-Isj"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WJs-Ua-8F9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1098.4000000000001" y="33.733133433283363"/>
         </scene>
     </scenes>
 </document>
